--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -10,7 +10,67 @@
 
 <body>
 
+<div class="bg-primary text-white pt-12 pb-24 border-b border-black">
+    <div class="container flex items-center">
+        <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>Home</h2>
+        <div class="ml-auto">
+            <h4 class="font-semibold ml-auto">Level 4</h4>
+            <div class="bg-[#F5F5F5] w-24 h-4 rounded-md">
+                <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
+            </div>
+        </div>
+    </div>
+    <p class="text-center text-lg mt-4">Welcome back, <span class="font-bold">John</span></p>
+</div>
 
+<div class="mx-8 -mt-16 shadow-lg rounded-bl-lg rounded-br-lg">    
+    <div class="bg-[#EBEBEB] text-center py-1 rounded-tl-lg rounded-tr-lg">
+        <p class="text-xs">000000103</p>
+    </div> 
+
+    <div class="py-4 bg-white">
+        <div class="mx-4 flex items-center">
+            <h4 class="font-semibold text-lg">Your Balance</h4>
+            <h4 class="ml-auto font-semibold text-2xl">£500.00</h4>
+        </div>
+    </div>
+    
+    <button href="" class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center">Send Money<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z"/></svg></button>
+</div>
+
+<div class="bg-white border-t border-b border-primary py-4 px-6 mt-8">
+    <h2 class="font-semibold text-lg">Green Level</h2>
+    <div class="text-center mt-4">
+        <h4 class="font-semibold text-lg">Level 4</h4>
+        <div class="bg-[#F5F5F5] w-24 h-4 rounded-md mt-2 mx-auto">
+            <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
+        </div>
+        <p class="mt-2"><span class="font-medium">33</span> points until Level 5</p>
+        <button href="" class="btn btn-primary mt-4 mx-auto rounded-md w-max flex gap-x-1.5 items-center">View Level History<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m140-220-60-60 300-300 160 160 284-320 56 56-340 384-160-160-240 240Z"/></svg></button>
+    </div>
+</div>
+
+<div class="mt-8 container">
+    <h2 class="font-semibold text-lg">Latest Transactions</h2>
+    <div class="transaction bg-green-200">
+        <p>GreenWaste Management</p>
+        <p class="ml-auto">-£45.76</p>
+    </div>
+    <div class="transaction bg-orange-200">
+        <p>FastMed Healthcare</p>
+        <p class="ml-auto">-£17.24</p>
+    </div>
+    <div class="transaction bg-red-200">
+        <p>RedFuel Services</p>
+        <p class="ml-auto">-£29.78</p>
+    </div>
+
+    <button href="" class="btn btn-primary mt-4 w-full rounded-md">View All Transactions</button>
+</div>
 
 </body>
+
+<footer>
+    
+</footer>
 </html>
