--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../style.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title></title>
 </head>
 
@@ -14,24 +15,24 @@
     <div class="container flex items-center">
         <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>Home</h2>
         <div class="ml-auto">
-            <h4 class="font-semibold ml-auto">Level 4</h4>
+            <h4 class="font-semibold ml-auto currentLevel">Level ...</h4>
             <div class="bg-[#F5F5F5] w-24 h-4 rounded-md">
                 <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
             </div>
         </div>
     </div>
-    <p class="text-center text-lg mt-4">Welcome back, <span class="font-bold">John</span></p>
+    <p class="text-center text-lg mt-4">Welcome back, <span class="font-bold accountName">...</span></p>
 </div>
 
 <div class="mx-8 -mt-16 shadow-lg rounded-bl-lg rounded-br-lg">    
     <div class="bg-[#EBEBEB] text-center py-1 rounded-tl-lg rounded-tr-lg">
-        <p class="text-xs">000000103</p>
+        <p class="text-xs accountNumber">...</p>
     </div> 
 
     <div class="py-4 bg-white">
         <div class="mx-4 flex items-center">
             <h4 class="font-semibold text-lg">Your Balance</h4>
-            <h4 class="ml-auto font-semibold text-2xl">£500.00</h4>
+            <h4 class="ml-auto font-semibold text-2xl balance">£...</h4>
         </div>
     </div>
     
@@ -41,11 +42,11 @@
 <div class="bg-white border-t border-b border-primary py-4 px-6 mt-8">
     <h2 class="font-semibold text-lg">Green Level</h2>
     <div class="text-center mt-4">
-        <h4 class="font-semibold text-lg">Level 4</h4>
+        <h4 class="font-semibold text-lg currentLevel">...</h4>
         <div class="bg-[#F5F5F5] w-24 h-4 rounded-md mt-2 mx-auto">
             <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
         </div>
-        <p class="mt-2"><span class="font-medium">33</span> points until Level 5</p>
+        <p class="mt-2"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span class="nextLevel">Level ...</span></p>
         <button href="" class="btn btn-primary mt-4 mx-auto rounded-md w-max flex gap-x-1.5 items-center">View Level History<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m140-220-60-60 300-300 160 160 284-320 56 56-340 384-160-160-240 240Z"/></svg></button>
     </div>
 </div>
@@ -68,6 +69,7 @@
     <button href="" class="btn btn-primary mt-4 w-full rounded-md">View All Transactions</button>
 </div>
 
+<script type="module" src="../functions.js"></script>
 </body>
 
 <footer>
