--- a/Frontend/pages/login.html
+++ b/Frontend/pages/login.html
@@ -22,8 +22,8 @@
         <label for="price" class="block text-sm font-medium leading-6 text-gray-900 text-center">Enter your account number to Login</label>
         <div class="relative mt-2 rounded-md shadow-sm">
             <form action="/login" method="POST">
-                <input type="text" name="accountNumber" id="accountNumber" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Account number">  
-                <button href="" class="btn btn-primary mt-4 mx-auto rounded-md w-max flex gap-x-1.5 items-center">Log in</button>
+                <input type="text" name="accountNumber" id="loginAccountNumberInput" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Account number">  
+                <button href="" name="loginButton" id="loginButton" class="btn btn-primary mt-4 mx-auto rounded-md w-max flex gap-x-1.5 items-center">Log in</button>
             </form>
         </div>
     </div>
