move js to login.js

--- a/Frontend/pages/login.html
+++ b/Frontend/pages/login.html
@@ -27,6 +27,6 @@
             </form>
         </div>
     </div>
-    <script type="module" src="../functions.js"></script>
+    <script type="module" src="../login.js"></script>
 </body>
 </html>
