--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <title></title>
     <style>
         .loader {
@@ -89,7 +90,7 @@
                             d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
                     </svg>-->
                 <svg xmlns="http://www.w3.org/2000/svg" 
-                        height="24px"  fill="#6CB4EE" width="24px" stroke="#FFFFFF" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"> 
+                        height="24px"  fill="#2897CF" width="24px" stroke="#FFFFFF" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"> 
                         <path d="M2.5 2v6h6M21.5 22v-6h-6"/><path d="M22 11.5A10 10 0 0 0 3.2 7.2M2 12.5a10 10 0 0 0 18.8 4.2"/>
                     
                 </svg>Send Money</h2>
@@ -114,24 +115,22 @@
                     <h4 class="ml-auto font-semibold text-2xl balance">£...</h4>
                 </div>
             </div>
-
-            <!-- <button href=""
-                class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center">Send
-                Money<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                    fill="#e8eaed">
-                    <path
-                        d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z" />
-                </svg></button> -->
         </div>
 
         <div class="bg-white border-t border-b border-primary py-4 px-6 mt-8">
             
             <form action="...">
-                <h2 class="font-semibold text-lg">Enter recipient:</h2>
-                <input type="text" id="recipient" name="Recipient">
-                <br><br>
-                <h2 class="font-semibold text-lg">Amount:</h2>
-                <input type="number" id="amount" name="Amount">
+                <div class="relative mt-2 rounded-md shadow-sm">
+                    <h2 class="font-semibold text-lg">Enter recipient:</h2>
+                    <input type="text" id="recipient" name="Recipient" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <br>
+                    <h2 class="font-semibold text-lg">Amount:</h2>
+                    <input type="number" id="amount" name="Amount" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <br>
+                    <h2 class="font-semibold text-lg">Reference:</h2>
+                    <input type="text" id="reference" name="Reference" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <br>
+                </div>
             </form>
 
             <button href="" class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center">Send
@@ -139,41 +138,7 @@
                     <path d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z"></path>
                 </svg></button>
         </div>    
-<!--         <div class="bg-white border-t border-b border-primary py-4 px-6 mt-8">
-            <h2 class="font-semibold text-lg">Green Level</h2>
-            <div class="text-center mt-4">
-                <h4 class="font-semibold text-lg currentLevel">...</h4>
-                <div class="bg-[#F5F5F5] w-24 h-4 rounded-md mt-2 mx-auto">
-                    <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
-                </div>
-                <p class="mt-2"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span
-                        class="nextLevel">Level ...</span></p>
-                <button href="" class="btn btn-primary mt-4 mx-auto rounded-md w-max flex gap-x-1.5 items-center">View
-                    Level History<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
-                        width="24px" fill="#e8eaed">
-                        <path d="m140-220-60-60 300-300 160 160 284-320 56 56-340 384-160-160-240 240Z" />
-                    </svg></button>
-            </div>
-        </div>
 
-        <div class="mt-8 container">
-            <h2 class="font-semibold text-lg">Latest Transactions</h2>
-            <div class="transaction bg-green-200">
-                <p>GreenWaste Management</p>
-                <p class="ml-auto">-£45.76</p>
-            </div>
-            <div class="transaction bg-orange-200">
-                <p>FastMed Healthcare</p>
-                <p class="ml-auto">-£17.24</p>
-            </div>
-            <div class="transaction bg-red-200">
-                <p>RedFuel Services</p>
-                <p class="ml-auto">-£29.78</p>
-            </div>
-
-            <button href="" class="btn btn-primary mt-4 w-full rounded-md">View All Transactions</button>
-        </div>
-    </div> -->
     <script type="module" src="../functions.js"></script>
 </body>
 
