--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -78,75 +78,87 @@
 
     <div class="full">
         <div class="bg-primary text-white pt-12 pb-24 border-b border-black">
-            <div class="container flex items-center">
+            <div class="container grid grid-cols-2 items-center">
                 <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><svg xmlns="http://www.w3.org/2000/svg"
                         height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
                         <path
                             d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
-                    </svg>Home</h2>
-                <div class="ml-auto">
-                    <h4 class="font-semibold ml-auto currentLevel">Level ...</h4>
-                    <div class="bg-[#F5F5F5] w-24 h-4 rounded-md">
-                        <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
+                    </svg>Home
+                </h2>
+                <div class="">
+                    <div class="bg-[#EBEBEB] text-center py-2 rounded-lg">
+                        <p class="text-xs text-black accountNumber">...</p>
                     </div>
                 </div>
             </div>
             <p class="text-center text-lg mt-4">Welcome back, <span class="font-bold accountName">...</span></p>
         </div>
 
-        <div class="mx-8 -mt-16 shadow-lg rounded-bl-lg rounded-br-lg">
-            <div class="bg-[#EBEBEB] text-center py-1 rounded-tl-lg rounded-tr-lg">
-                <p class="text-xs accountNumber">...</p>
-            </div>
+        <div class="mx-8 -mt-20 shadow-lg rounded-bl-lg rounded-br-lg">
+            <button href=""
+                class="btn btn-dark rounded-tl-lg rounded-tr-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                fill="#e8eaed">
+                <path
+                    d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z" />
+            </svg>Send
+                Money</button>
 
-            <div class="py-4 bg-white">
+            <div class="py-4 bg-white rounded-bl-lg rounded-br-lg">
                 <div class="mx-4 flex items-center">
                     <h4 class="font-semibold text-lg">Your Balance</h4>
                     <h4 class="ml-auto font-semibold text-2xl balance">£...</h4>
                 </div>
             </div>
-
-            <button href=""
-                class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center">Send
-                Money<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                    fill="#e8eaed">
-                    <path
-                        d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z" />
-                </svg></button>
         </div>
 
-        <div class="bg-white border-t border-b border-primary py-4 px-6 mt-8">
-            <h2 class="font-semibold text-lg">Green Level</h2>
-            <div class="text-center mt-4">
-                <h4 class="font-semibold text-lg currentLevel">...</h4>
-                <div class="bg-[#F5F5F5] w-24 h-4 rounded-md mt-2 mx-auto">
-                    <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
-                </div>
-                <p class="mt-2"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span
-                        class="nextLevel">Level ...</span></p>
-                <button href="" class="btn btn-primary mt-4 mx-auto rounded-md w-max flex gap-x-1.5 items-center">View
-                    Level History<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
-                        width="24px" fill="#e8eaed">
-                        <path d="m140-220-60-60 300-300 160 160 284-320 56 56-340 384-160-160-240 240Z" />
-                    </svg></button>
+        <div class="mt-8 bg-white border-t border-b border-primary px-8 py-6">
+            <div class="flex items-center">
+                <h2 class="font-semibold text-lg">Latest Transactions</h2>
+                <a href="" class="text-primary font-medium ml-auto btn btn-primary rounded-lg">See All</a>
             </div>
-        </div>
-
-        <div class="mt-8 container">
-            <h2 class="font-semibold text-lg">Latest Transactions</h2>
-            <button href="" class="btn btn-primary mt-4 w-full rounded-md">View All Transactions</button>
             <div class="transaction bg-green-200">
-                <p>GreenWaste Management</p>
-                <p class="ml-auto">-£45.76</p>
+                <div>
+                    <p class="font-medium">GreenWaste Management</p>
+                    <p class="text-xs">000000014</p>
+                </div>
+                <p class="ml-auto font-medium text-base">-£45.76</p>
             </div>
             <div class="transaction bg-orange-200">
-                <p>FastMed Healthcare</p>
-                <p class="ml-auto">-£17.24</p>
+                <div>
+                    <p class="font-medium">FastMed Healthcare</p>
+                    <p class="text-xs">000000007</p>
+                </div>
+                <p class="ml-auto font-medium text-base">-£17.24</p>
             </div>
             <div class="transaction bg-red-200">
-                <p>RedFuel Services</p>
-                <p class="ml-auto">-£29.78</p>
+                <div>
+                    <p class="font-medium">RedFuel Services</p>
+                    <p class="text-xs">000000001</p>
+                </div>
+                <p class="ml-auto font-medium text-base">-£29.78</p>
             </div>
+        </div>
+
+        <div class="mx-8 mt-8 shadow-lg rounded-lg bg-white pt-4">
+            <div class="mx-4">
+                <div class="grid grid-cols-2 text-sm font-medium">
+                    <h5>Green Level</h5>
+                    <h5 class="ml-auto"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span class="nextLevel">Level ...</span></h5>
+                </div>
+            </div>
+
+            <div class="flex items-center gap-x-8 mx-4 mt-1">
+                <h4 class="shrink-0 currentLevel">...</h4>
+                <div class="bg-[#F5F5F5] w-full h-4 rounded-md border border-black">
+                    <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
+                </div>
+            </div>
+
+            <button href=""
+            class="btn btn-green rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center mt-1"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+            width="24px" fill="#e8eaed">
+            <path d="m140-220-60-60 300-300 160 160 284-320 56 56-340 384-160-160-240 240Z" />
+        </svg>View Level History</button>
         </div>
     </div>
     <script type="module" src="../functions.js"></script>
