text size tweak

--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -141,9 +141,9 @@
 
         <div class="mx-8 mt-8 shadow-lg rounded-lg bg-white pt-4">
             <div class="mx-4">
-                <div class="grid grid-cols-2 text-sm font-medium">
-                    <h5>Green Level</h5>
-                    <h5 class="ml-auto"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span class="nextLevel">Level ...</span></h5>
+                <div class="grid grid-cols-2 text-sm">
+                    <h5 class="font-medium">Green Level</h5>
+                    <h5 class="ml-auto text-xs"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span class="nextLevel">Level ...</span></h5>
                 </div>
             </div>
 
