fix: fixing styling

--- a/Frontend/pages/register.html
+++ b/Frontend/pages/register.html
@@ -42,10 +42,11 @@
             <button name="backButton" id="backButton"
                 class="btn btn-primary mt-4 mx-auto rounded-md w-max flex gap-x-1.5 items-center">Back to Sign
                 In</button>
+            <label class="registeredText block text-sm font-medium leading-6 text-gray-900 text-center"></label>
         </div>
     </div>
 
-    <div class="registeredText"></div>
+    
 </body>
 
 </html>
