feat: error handling for sign-in, fixing text if levels maxed

--- a/Frontend/pages/login.html
+++ b/Frontend/pages/login.html
@@ -25,6 +25,7 @@
             <input type="text" name="accountNumber" id="loginAccountNumberInput" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Account number">  
             <button name="loginButton" id="loginButton" class="btn btn-primary mt-4 mx-auto rounded-md w-max flex gap-x-1.5 items-center">Log in</button>
             <button name="registerButton" id="registerButton" class="btn btn-primary mt-4 mx-auto rounded-md w-max flex gap-x-1.5 items-center">Register new account</button>
+            <label class="signingInText block text-sm font-medium leading-6 text-red-900 text-center"></label>
         </div>
     </div>
 </body>
