--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -143,7 +143,7 @@
             <div class="mx-4">
                 <div class="grid grid-cols-2 text-sm">
                     <h5 class="font-medium">Green Level</h5>
-                    <h5 class="ml-auto text-xs"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span class="nextLevel">Level ...</span></h5>
+                    <h5 class="ml-auto text-xs"><span class="fullLevelText"><span class="font-medium pointsRemainingToNextLevel">...</span> points until <span class="nextLevel">Level ...</span></span></h5>
                 </div>
             </div>
 
