--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -66,6 +66,13 @@
             background-color: #F0F8FF;
         }
 
+        .h1 {
+            display: none;
+            font-size: xx-small;
+            font-style: italic;
+            color: red;
+        }
+
     </style>
 </head>
 
@@ -82,15 +89,47 @@
         <div class="bg-primary text-white pt-12 pb-24 border-b border-black">
             <div class="container flex items-center">
                 <h2 class="font-semibold text-2xl flex items-center gap-x-1.5">
-                <dialog id="dialog">
-                    <h4 class="font-semibold text-lg">Payment Successful!</h4>
+    <!-- Popup that appears when the transaction has been successful. -->
+                <dialog id="sentMoneySuccessful">
+                    <div class="bg-[#EBEBEB] text-center py-1 rounded-tl-lg rounded-tr-lg">
+                        <h4 class="font-semibold text-lg">Payment Successful!</h4>
+                    </div>
                     <br>
-                    <svg xmlns="http://www.w3.org/2000/svg" 
-                    width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#6dc800" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                    <svg class="mx-auto" xmlns="http://www.w3.org/2000/svg" 
+                    width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#6dc800" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" >
                     <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
-
-
+                    <br>
+                    <!-- This button will return the user to the Home Page -->
+                    <button href=""
+                    class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg"
+                    height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+                    <path
+                        d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
+                </svg>Home Page</button>
                 </dialog>
+
+    <!-- Popup for when the transaction hasn't been successful (the recipient wasn't found) -->
+                <dialog id="wrongRecipient">
+                    <div class="bg-[#EBEBEB] text-center py-1 rounded-tl-lg rounded-tr-lg">
+                        <h4 class="font-semibold text-lg">&nbsp;Sorry&nbsp;</h4>
+                        <h4 class="font-semibold text-lg">&nbsp;&nbsp;Something was wrong&nbsp;&nbsp;</h4>
+                    </div>
+                    <br>
+                    <svg class="mx-auto" xmlns="http://www.w3.org/2000/svg" 
+                    width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#d0021b" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="bevel">
+                    <circle cx="12" cy="12" r="10"></circle><line x1="15" y1="9" x2="9" y2="15"></line><line x1="9" y1="9" x2="15" y2="15"></line>
+                    </svg>
+                    <br>
+                    <!-- This button will dissapear the popup -->
+                    <button onclick="tryAgain()" href="" 
+                    class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                    width="24px" height="24px" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="bevel"> 
+                    <path d="M2.5 2v6h6M21.5 22v-6h-6"/><path d="M22 11.5A10 10 0 0 0 3.2 7.2M2 12.5a10 10 0 0 0 18.8 4.2"/></svg>
+                    Try Again</button>
+                </dialog>
+
+
                 <h2 class="font-semibold text-2xl flex items-center gap-x-1.5">
                 <svg xmlns="http://www.w3.org/2000/svg" 
                         height="24px"  fill="#2897CF" width="24px" stroke="#FFFFFF" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"> 
@@ -125,33 +164,39 @@
             <form action="...">
                 <div class="relative mt-2 rounded-md shadow-sm">
                     <h2 class="font-semibold text-lg">Enter recipient:</h2>
-                    <input type="text" id="recipient" name="Recipient" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                    <br>
+                    <input type="text" id="recipient" name="Recipient" class="shadow appearance-none border border-black-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" placeholder="Recipient">
+                    <p class="h1">Enter a valid recipient</p>
                     <h2 class="font-semibold text-lg">Amount:</h2>
-                    <input type="number" id="amount" name="Amount" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                    <br>
+                    <input type="number" id="amount" name="Amount" class="shadow appearance-none border border-black-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" placeholder="Amount">
+                    <p class="h1">Amount not valid</p>
                     <h2 class="font-semibold text-lg">Reference:</h2>
-                    <input type="text" id="reference" name="Reference" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                    <br>
+                    <input type="text" id="reference" name="Reference" class="shadow appearance-none border border-black-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" placeholder="Reference">
+                    <p class="h1">Enter a reference</p>
                 </div>
             </form>
 
-            <button onclick="showDialog()" href="" class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center">Send
+            <button onclick="launchDialog()" href="" class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center">Send
                 Money<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
                     <path d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z"></path>
                 </svg></button>
         </div>    
 
-<!--     <script type="module" src="../functions.js"></script> -->
-     <script>
-        //press the button and shows the dialog
-        function showDialog()
-        {
-            const dialog = document.getElementById('dialog');
-            dialog.showModal();
-        }
+<!-- <script type="module" src="../functions.js"></script>
+ -->
+        <script>
+            function tryAgain() {
+                const wrongRecipient = document.getElementById('wrongRecipient');
+                wrongRecipient.close();
+            }
 
-     </script>
+            function launchDialog() {
+                const d = document.getElementById('wrongRecipient');
+                wrongRecipient.showModal();
+            }
+
+            
+
+        </script>
 </body>
 
 <footer>
