moved js outside html doc and started working on api call

--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -181,22 +181,7 @@
                 </svg></button>
         </div>    
 
-<!-- <script type="module" src="../functions.js"></script>
- -->
-        <script>
-            function tryAgain() {
-                const wrongRecipient = document.getElementById('wrongRecipient');
-                wrongRecipient.close();
-            }
-
-            function launchDialog() {
-                const d = document.getElementById('wrongRecipient');
-                wrongRecipient.showModal();
-            }
-
-            
-
-        </script>
+        <script type="module" src="../sendMoney.js"></script>
 </body>
 
 <footer>
