--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../style.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title></title>
     <style>
         .loader {
@@ -114,29 +113,9 @@
         <div class="mt-8 bg-white border-t border-b border-primary px-8 py-6">
             <div class="flex items-center">
                 <h2 class="font-semibold text-lg">Latest Transactions</h2>
-                <a href="" class="text-primary font-medium ml-auto btn btn-primary rounded-lg">See All</a>
+                <a href="transactionPage.html" class="text-primary font-medium ml-auto btn btn-primary rounded-lg">See All</a>
             </div>
-            <div class="transaction bg-green-200">
-                <div>
-                    <p class="font-medium">GreenWaste Management</p>
-                    <p class="text-xs">000000014</p>
-                </div>
-                <p class="ml-auto font-medium text-base">-£45.76</p>
-            </div>
-            <div class="transaction bg-orange-200">
-                <div>
-                    <p class="font-medium">FastMed Healthcare</p>
-                    <p class="text-xs">000000007</p>
-                </div>
-                <p class="ml-auto font-medium text-base">-£17.24</p>
-            </div>
-            <div class="transaction bg-red-200">
-                <div>
-                    <p class="font-medium">RedFuel Services</p>
-                    <p class="text-xs">000000001</p>
-                </div>
-                <p class="ml-auto font-medium text-base">-£29.78</p>
-            </div>
+            <div id="latestTransactions"></div>
         </div>
 
         <div class="mx-8 mt-8 shadow-lg rounded-lg bg-white pt-4">
