--- a/Frontend/pages/login.html
+++ b/Frontend/pages/login.html
@@ -15,7 +15,7 @@
     <nav class="w-full bg-primary text-white py-4 fixed top-0">
         <div class="container mx-auto text-center">
             <h2 class="font-semibold text-2xl flex items-center justify-center gap-x-2"><span class="material-symbols-outlined">
-                account_balance</span>Bank Name</h2>
+                account_balance</span>Eco-Bank</h2>
         </div>
     </nav>
     <!--Account number part-->
