--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!--This is for event let user to confirm to log out-->
+    <script>
+        function confirmLogout(event) {
+            event.preventDefault();
+            if (confirm("Are you sure you want to log out?")) {
+                window.location.href = "login.html";
+            }
+        }
+    </script>
     <title></title>
     <style>
         .loader {
@@ -62,6 +72,10 @@
         .g5 {
             animation-delay: 0.5s;
             background-color: #F0F8FF;
+        }
+        footer{
+            position:fixed;
+            bottom: 0;
         }
     </style>
 </head>
@@ -140,6 +154,14 @@
         </svg>View Level History</button>
         </div>
     </div>
+    <footer class="w-full bg-primary text-white py-4 fixed bottom-0">
+    <div class="container mx-auto flex justify-center">   
+        <button onclick="confirmLogout(event)" class="btn bg-red-600 hover:bg-red-800 !py-1.5 w-32 h-8 flex items-center justify-center mt-1"> 
+            <span class="material-symbols-outlined">logout</span>
+            Log out
+        </button>
+        </div>
+    </footer>
     <script type="module" src="../functions.js"></script>
 </body>
 
