--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -108,13 +108,13 @@
         </div>
 
         <div class="mx-8 -mt-20 shadow-lg rounded-bl-lg rounded-br-lg">
-            <button href=""
+            <a href="sendmoney.html"
                 class="btn btn-dark rounded-tl-lg rounded-tr-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#e8eaed">
                 <path
                     d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z" />
             </svg>Send
-                Money</button>
+                Money</a>
 
             <div class="py-4 bg-white rounded-bl-lg rounded-br-lg">
                 <div class="mx-4 flex items-center">
