added link for back button

--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -97,13 +97,12 @@
 
         <div class="container mt-4">
             <div class="flex items-center gap-x-16">
-                <a href="" class="text-primary flex items-center"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"/></svg>Back</a>
+                <a href="home.html" class="text-primary flex items-center"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"/></svg>Back</a>
                 <div class="ml-auto w-full">
                     <div class="flex items-center w-full">
                         <h4 class="font-semibold currentLevel text-sm shrink-0">Level ...</h4>   
                         <p class="text-[10px] ml-auto">33 points until level 5</p>
                     </div>
-
 
                     <div class="bg-[#F5F5F5] w-24 h-4 rounded-md border border-black w-full">
                         <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
