--- a/Frontend/pages/transactionPage.html
+++ b/Frontend/pages/transactionPage.html
@@ -103,12 +103,7 @@
         <div class="bg-primary text-white pt-12 pb-24 border-b border-black">
             <div class="containerForTransactionList">
                 <div class="grid grid-cols-2 items-center">
-                    <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><svg
-                            xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                            fill="#e8eaed">
-                            <path
-                                d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
-                        </svg>Home
+                    <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><span class="material-symbols-outlined">history</span>Transaction History
                     </h2>
                     <div class="">
                         <div class="bg-[#EBEBEB] text-center py-2 rounded-lg">
