--- a/Frontend/pages/transactionPage.html
+++ b/Frontend/pages/transactionPage.html
@@ -103,7 +103,7 @@
         <div class="bg-primary text-white pt-12 pb-24 border-b border-black">
             <div class="containerForTransactionList">
                 <div class="grid grid-cols-2 items-center">
-                    <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><span class="material-symbols-outlined">history</span>Transaction History
+                    <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><span class="material-symbols-outlined">history</span>History
                     </h2>
                     <div class="">
                         <div class="bg-[#EBEBEB] text-center py-2 rounded-lg">
