--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -81,11 +81,8 @@
     <div class="full">
         <div class="bg-primary text-white py-8 border-b border-black">
             <div class="container grid grid-cols-2 items-center">
-                <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><svg xmlns="http://www.w3.org/2000/svg"
-                    height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
-                    <path
-                        d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
-                </svg>Rewards
+                <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m668-380 152-130 120 10-176 153 52 227-102-62-46-198Zm-94-292-42-98 46-110 92 217-96-9ZM294-287l126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM173-120l65-281L20-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-340Z"/></svg>
+                    Rewards
                 </h2>
                 <div class="">
                     <div class="bg-[#EBEBEB] text-center py-2 rounded-lg">
