--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -158,7 +158,7 @@
         </div>
     </div>
 
-    <footer class="w-full bg-primary text-white py-4 mt-8">
+    <footer class="w-full bg-primary text-white py-4 mt-8 fixed bottom-0">
     <div class="container mx-auto flex justify-center">   
         <button onclick="confirmLogout(event)" class="btn bg-red-600 hover:bg-red-800 !py-1.5 w-32 h-8 flex items-center justify-center mt-1"> 
             <span class="material-symbols-outlined">logout</span>
