reorganised file structure and changed html references to match

--- a/Frontend/pages/individualTransaction.html
+++ b/Frontend/pages/individualTransaction.html
@@ -140,7 +140,7 @@
                                     </div>
 
                                 </div>
-                                <script type="module" src="../transactionFunction.js"></script>
+                                <script type="module" src="../javascript/transactionFunction.js"></script>
                             </div>
                         </div>
                     </div>
