--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -264,7 +264,7 @@
         }
      </script>
 
-    <script type="module" src="../rewards.js"></script>
+    <script type="module" src="../javascript/rewards.js"></script>
 </body>
 
 <footer>
