--- a/Frontend/pages/transactionPage.html
+++ b/Frontend/pages/transactionPage.html
@@ -147,7 +147,7 @@
         </div>
     </div>
     </div>
-    <script type="module" src="../transactions.js"></script>
+    <script type="module" src="../javascript/transactions.js"></script>
 
 </body>
 
