--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -119,67 +119,9 @@
         </div>
 
         <div id="leaderboard" class="container mt-8 hidden">
-            <h2 class="text-lg font-semibold mb-4 text-center">Leaderboard for September</h2>
+            <h2 class="text-lg font-semibold mb-4 text-center">Leaderboard</h2>
             
-            <div class="leaderboard-name">
-                <div class="bg-[#FFD700] circle">1</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">412</p>
-            </div>
-
-            <div class="leaderboard-name">
-                <div class="bg-[#C0C0C0] circle">2</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">405</p>
-            </div>
-
-            <div class="leaderboard-name">
-                <div class="bg-[#CE8946] circle">3</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">394</p>
-            </div>
-            
-            <div class="leaderboard-name">
-                <div class="bg-primary circle">4</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">378</p>
-            </div>
-
-            <div class="leaderboard-name">
-                <div class="bg-primary circle">5</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">355</p>
-            </div>
-
-            <div class="leaderboard-name">
-                <div class="bg-primary circle">6</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">324</p>
-            </div>
-
-            <div class="leaderboard-name">
-                <div class="bg-primary circle">7</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">309</p>
-            </div>
-
-            <div class="leaderboard-name">
-                <div class="bg-primary circle">8</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">302</p>
-            </div>
-
-            <div class="leaderboard-name">
-                <div class="bg-primary circle">9</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">298</p>
-            </div>
-
-            <div class="leaderboard-name">
-                <div class="bg-primary circle">10</div>
-                <h4 class="font-medium text-sm">John Smith</h4>
-                <p class="text-sm ml-auto mr-2">295</p>
-            </div>
+            <div id="leaderboardData"></div>
         </div>
 
         <div id="rewards" class="mt-8">
