--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=http://localhost:8000/pages/login.html" />
+<meta http-equiv="refresh" content="0;url=https://jackson-stewart.github.io/Industrial-Team-Project---Eco-Friendly-Banking-App/Frontend/pages/login.html" />
