Revert "reorganised file structure and changed html references to match"
This reverts commit 45e1224144c66bce51b1368ef2fca55c5d33c8d6.

--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -166,7 +166,7 @@
         </button>
         </div>
     </footer>
-    <script type="module" src="../javascript/functions.js"></script>
+    <script type="module" src="../functions.js"></script>
 </body>
 
 <footer>
