--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="../javascript/sendMoney.js"></script>
+    <script type="module" src="../sendMoney.js"></script>
     <title>Send Money</title>
     <style>
         .loader {
