transactions are clickable, fixing extensions for api urls

--- a/Frontend/pages/individualTransaction.html
+++ b/Frontend/pages/individualTransaction.html
@@ -91,6 +91,10 @@
                                 <p class="font-medium">RAG Rating: </p>
 
                             </div>
+                            <div>
+                                <p class="font-medium">Reference: </p>
+
+                            </div>
                         </div>
 
 
