level bar on home page shows right percentage

--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -139,7 +139,7 @@
             <div class="flex items-center gap-x-8 mx-4 mt-1">
                 <h4 class="shrink-0 currentLevel">...</h4>
                 <div class="bg-[#F5F5F5] w-full h-4 rounded-md border border-black">
-                    <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
+                    <div class="bg-green-400 h-full rounded-tl-md rounded-bl-md levelBar"></div>
                 </div>
             </div>
 
