home button link

--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -101,12 +101,12 @@
                     <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
                     <br>
                     <!-- This button will return the user to the Home Page -->
-                    <button href=""
+                    <a href="home.html"
                     class="btn btn-primary rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg"
                     height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
                     <path
                         d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
-                </svg>Home Page</button>
+                </svg>Home Page</a>
                 </dialog>
 
     <!-- Popup for when the transaction hasn't been successful (the recipient wasn't found) -->
