feat: changed text for individual transaction page if recipient is a user, fixed clickable items for today's transactions list

--- a/Frontend/pages/individualTransaction.html
+++ b/Frontend/pages/individualTransaction.html
@@ -100,7 +100,7 @@
 </head>
 
 <body>
-    <div class='loader'></div>
+    <div class='loader'>
         <div class='gfg g1'></div>
         <div class='gfg g2'></div>
         <div class='gfg g3'></div>
