fix: account numbers not showing

--- a/Frontend/pages/individualTransaction.html
+++ b/Frontend/pages/individualTransaction.html
@@ -140,6 +140,10 @@
 
                             </div>
                             <div>
+                                <p class="font-medium">Account Number: </p>
+
+                            </div>
+                            <div>
                                 <p class="font-medium">Spending Category: </p>
 
                             </div>
