--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -80,19 +80,19 @@
 
     <div class="full">
         <div class="bg-primary text-white py-8 border-b border-black">
-            <div class="container grid grid-cols-2 items-center">
+            <div class="grid grid-cols-2 items-center lg:w-1/2 lg:mx-auto px-6 lg:px-0">
                 <h2 class="font-semibold text-2xl flex items-center gap-x-1.5"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m668-380 152-130 120 10-176 153 52 227-102-62-46-198Zm-94-292-42-98 46-110 92 217-96-9ZM294-287l126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM173-120l65-281L20-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-340Z"/></svg>
                     Rewards
                 </h2>
                 <div class="">
-                    <div class="bg-[#EBEBEB] text-center py-2 rounded-lg">
+                    <div class="bg-[#EBEBEB] text-center py-2 rounded-lg lg:w-max lg:px-4 lg:ml-auto">
                         <p class="text-xs text-black accountNumber">...</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container mt-4">
+        <div class="mt-4 px-6 lg:px-0 lg:w-1/2 lg:mx-auto">
             <div class="flex items-center gap-x-16">
                 <a href="home.html" class="text-primary flex items-center"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M560-240 320-480l240-240 56 56-184 184 184 184-56 56Z"/></svg>Back</a>
                 <div class="ml-auto w-full">
@@ -113,22 +113,22 @@
             <p class="text-xs">points earned</p>
         </div>
 
-        <div class="flex items-center mt-8">
+        <div class="flex items-center mt-8 lg:w-1/2 lg:mx-auto">
             <div id="tab_0" class="tab active" onclick="changeView(0)">Rewards</div>
             <div id="tab_1" class="tab" onclick="changeView(1)">Leaderboard</div>
         </div>
 
-        <div id="leaderboard" class="container mt-8 hidden">
+        <div id="leaderboard" class="mt-8 px-6 lg:px-0 lg:w-1/3 lg:mx-auto hidden">
             <h2 class="text-lg font-semibold mb-4 text-center">Leaderboard</h2>
             
             <div id="leaderboardData"></div>
         </div>
 
-        <div id="rewards" class="mt-8">
+        <div id="rewards" class="mt-8 lg:w-1/3 lg:mx-auto">
             <h2 class="container text-lg font-semibold">Reward Categories</h2>
 
             <div class="border-t border-b border-primary py-2 w-full mt-2">
-                <div class="container flex gap-x-4 overflow-x-scroll">
+                <div class="container flex gap-x-4 overflow-x-scroll lg:!overflow-x-visible lg:justify-center">
                     <div class="btn btn-primary w-max rounded">All</div>
                     <div class="btn bg-orange-400 text-white w-max rounded flex items-center gap-x-0.5"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed" class="w-5 h-5"><path d="M240-80q-33 0-56.5-23.5T160-160v-480q0-33 23.5-56.5T240-720h80q0-66 47-113t113-47q66 0 113 47t47 113h80q33 0 56.5 23.5T800-640v480q0 33-23.5 56.5T720-80H240Zm0-80h480v-480h-80v80q0 17-11.5 28.5T600-520q-17 0-28.5-11.5T560-560v-80H400v80q0 17-11.5 28.5T360-520q-17 0-28.5-11.5T320-560v-80h-80v480Zm160-560h160q0-33-23.5-56.5T480-800q-33 0-56.5 23.5T400-720ZM240-160v-480 480Z"/></svg>Shopping</div>
                     <div class="btn bg-red-800 text-white w-max rounded flex items-center gap-x-0.5"><svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m380-340 280-180-280-180v360Zm-60 220v-80H160q-33 0-56.5-23.5T80-280v-480q0-33 23.5-56.5T160-840h640q33 0 56.5 23.5T880-760v480q0 33-23.5 56.5T800-200H640v80H320ZM160-280h640v-480H160v480Zm0 0v-480 480Z"/></svg>Media</div>
@@ -142,7 +142,7 @@
             </div>
         </div>
         
-        <div id="dialog" class="w-full py-4 fixed bg-white border-gray-400 top-1/3 z-20 hidden">
+        <div id="dialog" class="w-full lg:!w-1/3 lg:left-1/2 lg:transform lg:-translate-x-1/2 py-4 fixed bg-white border-gray-400 top-1/3 z-20 hidden">
             <svg onclick="hideDialog()" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor" class="absolute right-2 top-2 text-gray-600"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
             <div class="flex items-center border-b border-primary px-4 pb-2">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#00A4D3"><path d="m668-380 152-130 120 10-176 153 52 227-102-62-46-198Zm-94-292-42-98 46-110 92 217-96-9ZM294-287l126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM173-120l65-281L20-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-340Z"/></svg>
